data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_749.wast
;; 10. **Test Description**: Use `br_if` where the condition evaluates to false, but the label requires particular operand types.     - **Constraint Checked**: Confirms no branch occurs and operand stack remains consistent.     - **Incorrect Condition Evaluation**: Potential incorrect condition evaluation might cause unexpected operand types output.

(assert_invalid
  (module
    (func $test-br-if-condition-false
      (block (result i32)
        (i32.const 0)
        (br_if 0 (i32.const 0) (i32.const 42))
      )
      (i32.add (i32.const 1))
    )
  )
  "type mismatch"
)